tests/derive-bitfield-specifier/adt_errors.stderr
error: BitfieldSpecifier expected a number of variants which is a power of 2, specify #[bits = 2] if that was your intent
  --> tests/derive-bitfield-specifier/adt_errors.rs:20:5
   |
20 | pub enum NonPowerOf2 {
   |     ^^^^

error[E0277]: the trait bound `False: DiscriminantInRange` is not satisfied
   --> tests/derive-bitfield-specifier/adt_errors.rs:16:5
    |
16  |     OutOfRange,
    |     ^^^^^^^^^^ the trait `DiscriminantInRange` is not implemented for `False`
    |
note: required by a bound in `CheckDiscriminantInRange`
   --> src/private/checks.rs
    |
    |     <Self::CheckType as DispatchTrueFalse>::Out: DiscriminantInRange,
    |                                                  ^^^^^^^^^^^^^^^^^^^ required by this bound in `CheckDiscriminantInRange`
